added jellyfin install and graphics card passthrough

--- a/Jellyfin/lxc.conf
+++ b/Jellyfin/lxc.conf
@@ -7,7 +7,7 @@ cores: 2
 features: nesting=1
 hostname: jellyfin
 memory: 2048
-mp0: /media/share/Movies/,mp=/media/
+mp0: /mnt/pve/movies/Movies/,mp=/mnt/pve/media/
 net0: name=eth0,bridge=vmbr0,gw=192.168.1.1,hwaddr=AE:74:30:2F:9A:26,ip=192.168.1.18/24,type=veth
 onboot: 1
 ostype: ubuntu
