update lxc with new mount points

--- a/JellyfinLXC/lxc.conf
+++ b/JellyfinLXC/lxc.conf
@@ -2,26 +2,31 @@
 #  ### https%3A//tteck.github.io/Proxmox/
 #  <a href='https%3A//ko-fi.com/D1D7EP4GF'><img src='https%3A//img.shields.io/badge/%E2%98%95-Buy me a coffee-red' /></a>
 #lxc.mount.entry%3A /dev/nvidia-modeset dev/nvidia-modeset none bind,optional,create=file
+#lxc.mount.entry%3A /dev/dri dev/dri none bind,optional,create=dir
 arch: amd64
 cores: 2
 features: nesting=1
 hostname: jellyfin
 memory: 2048
-mp0: /mnt/pve/movies/Movies/,mp=/mnt/pve/media/
-net0: name=eth0,bridge=vmbr0,gw=192.168.1.1,hwaddr=AE:74:30:2F:9A:26,ip=192.168.1.18/24,type=veth
+mp0: /mnt/pve/movies/Movies,mp=/media/
+mp1: /mnt/pve/photos,mp=/photos/
+mp2: /mnt/pve/cc_camera_backyard,mp=backyard
+mp3: /mnt/pve/cc_camera_frontyard,mp=frontyard
+net0: name=eth0,bridge=vmbr0,gw=192.168.1.1,hwaddr=AE:74:30:2F:9A:26,ip=192.168.1.21/24,type=veth
 onboot: 1
 ostype: ubuntu
 rootfs: local-lvm:vm-100-disk-0,size=16G
 swap: 512
 tags: proxmox-helper-scripts
+unprivileged: 1
 lxc.cgroup2.devices.allow: a
 lxc.cap.drop:
 lxc.cgroup2.devices.allow: c 226:0 rwm
 lxc.cgroup2.devices.allow: c 226:128 rwm
 lxc.cgroup2.devices.allow: c 29:0 rwm
 lxc.mount.entry: /dev/fb0 dev/fb0 none bind,optional,create=file
-lxc.mount.entry: /dev/dri dev/dri none bind,optional,create=dir
 lxc.mount.entry: /dev/dri/renderD128 dev/dri/renderD128 none bind,optional,create=file
+lxc.mount.entry: /dev/dri dev/dri none bind,optional,create=file
 lxc.cgroup2.devices.allow: c 195:* rwm
 lxc.cgroup2.devices.allow: c 508:* rwm
 lxc.cgroup2.devices.allow: c 236:* rwm
@@ -29,6 +34,3 @@ lxc.mount.entry: /dev/nvidia0 dev/nvidia0 none bind,optional,create=file
 lxc.mount.entry: /dev/nvidiactl dev/nvidiactl none bind,optional,create=file
 lxc.mount.entry: /dev/nvidia-modeset dev/nvidia-modeset none bind,optional,create=file
 lxc.mount.entry: /dev/nvidia-uvm dev/nvidia-uvm none bind,optional,create=file
-lxc.mount.entry: /dev/nvidia-uvm-tools dev/nvidia-uvm-tools none bind,optional,create=file
-lxc.mount.entry: /dev/nvidia-uvm-tools dev/nvidia-caps/nvidia-cap1 none bind,optional,create=file
-lxc.mount.entry: /dev/nvidia-uvm-tools dev/nvidia-caps/nvidia-cap2 none bind,optional,create=file
